# genshin-fps-unlocker

./: Cargo.toml  README.md
src/: main.rs
src/lib/: config_service.rs  mod.rs  process_service.rs  process_util.rs  win_native.rs
src/models/: config.rs
