[package]
name = "genshin-fps-unlocker"
version = "0.1.0"
edition = "2021"
authors = ["Mufaro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = [
  "windef",
  "winuser",
  "processthreadsapi",
  "handleapi",
  "tlhelp32",
  "synchapi",
  "memoryapi",
  "libloaderapi",
  "psapi",
] }
windows = { version = "0.54.0", features = [
  "Win32",
  "Win32_System",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
] }
windows-result = "0.1.0"
